# cachelib

./: .gitignore  CMakeLists.txt  CMakeSettings.json  cachelib.cpp  cachelib.h
cachetool/: CMakeLists.txt  main.cpp
lib/: CMakeLists.txt  archive.cpp  archive.h  cachestore.cpp  cachestore.h  datafile.cpp  datafile.h  index.cpp  index.h  index_file.cpp  index_file.h  inputstream.h  itemdefinition.cpp  itemdefintion.h  metadata.cpp  metadata.h  xtea.cpp  xtea.h
test/: CMakeLists.txt  main.cpp
