# CMakeList.txt : CMake project for cachelib, include source and define
# project specific logic here.
#
cmake_minimum_required (VERSION 3.8)

project ("cachelib")

# Add source to this project's executable.
add_executable (cachelib "cachelib.cpp" "cachelib.h")

# TODO: Add tests and install targets if needed.
